# gb-rs

./: Cargo.toml  README.md
asm/: Cargo.toml
asm/src/: containers.rs  lib.rs  parse.rs  read.rs  sets.rs
asm/src/instructions/: compare.rs  mod.rs
asm/src/instructions/add/: mod.rs  pair.rs  register.rs
asm/src/instructions/bit/: and.rs  complement.rs  mod.rs  or.rs  reset.rs  set.rs  shift_left.rs  shift_right.rs  swap.rs  test.rs  xor.rs
asm/src/instructions/bitwise/: and.rs  complement.rs  mod.rs  or.rs  reset.rs  set.rs  shift_left.rs  shift_right.rs  swap.rs  test.rs  xor.rs
asm/src/instructions/decrement/: mod.rs  pair.rs  pair_pointer.rs  register.rs
asm/src/instructions/increment/: mod.rs  pair.rs  pair_pointer.rs  register.rs
asm/src/instructions/jump/: absolute.rs  mod.rs  relative.rs
asm/src/instructions/load/: data_pointer.rs  mod.rs  pair.rs  pair_pointer.rs  register.rs  register_pointer.rs
asm/src/instructions/rotate_left/: carrying.rs  cyclic.rs  mod.rs
asm/src/instructions/rotate_right/: carrying.rs  cyclic.rs  mod.rs
asm/src/instructions/stack/: mod.rs  pop.rs  push.rs
asm/src/operations/: compare.rs  mod.rs
asm/src/sets/: mod.rs
asm/tests/: base.json  extended.json  instructions.rs
asm/tools/: bit.py  pastraiser_extract_expected.js  pastraiser_simple_cycles.js
cli/: Cargo.toml
cli/src/: app.rs  auto.rs  main.rs
cli/src/command/: auto.rs  mod.rs  read.rs  write.rs
cli/src/ui/: input.rs  log.rs  mod.rs  registers.rs
test-cli/: Cargo.toml
test-cli/src/: cli.rs  hardware.rs  interact.rs  main.rs  output.rs  ui.rs
(+95 files in other folders)
