[package]
name = "gb_rs_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
tui = "0.19"
crossterm = "0.26"
clap = { version = "4.1", features = ["derive"] }
gb_rs_core = { path = "../core" }
gb_rs_asm = { path = "../asm" }
