[package]
name = "gb_rs_test_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1", features = ["derive"] }
clap-num = "1.0"
gb-rs-cpu = { path = "../cpu" }
gb-rs-memory = { path = "../memory" }
gb_rs_asm = { path = "../asm" }
thiserror = "1.0"
tui = "0.19"
crossterm = "0.26"
unicode-width = "0.1"
